# surfio

./: .clang-format  .cmake-format.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conanfile.txt  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml  pull_request.yml  release.yml
src/lib/: irap_export_ascii.cpp  irap_export_binary.cpp  irap_import.cpp  irap_import_ascii.cpp  irap_import_binary.cpp
src/lib/include/: irap.h  irap_export.h  irap_import.h
src/lib/mmap_helper/: mmap_helper.cpp
src/lib/mmap_wrapper/: mmap_wrapper.cpp  mmap_wrapper.h
src/lib/strto_wrapper/: strto_wrapper.h
src/pybind_module/: surfio.cpp
src/pybind_module/include/: irap_pybind.h
tests/: test_irap_ascii.py  test_irap_binary.py  test_reading.py
tests/lib/: test_irap_ascii.cpp  test_irap_binary.cpp  test_irap_header.cpp
tests/lib/helpers/: helper.cpp  helper.h
tests/manual_performance_test/: compare.py
tests/python_module/: test_irap_ascii.py  test_irap_binary.py
