[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "ninja",
  "cmake>=3.22",
  "numpy",
  "setuptools_scm>=8.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "surfio"
description = "Reader/Writer library for irap files."
dynamic = ["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Other Environment",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "pytest-snapshot", "xtgeo"]

[tool.mypy]
files = "setup.py"
python_version = "3.11"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests/python_module"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"

test-extras = ["dev"]
before-build = "python -m pip install -U pip && rm -rf {project}/build"
test-command = ["pytest {project}/tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
